apps/base/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    http-ingress: "true"
