apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
  annotations:
    metallb.io/allow-shared-ip: homelab
spec:
  ports:
  - name: http-web
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  type: LoadBalancer
