apps/base/mealie/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mealie-http
  namespace: mealie
spec:
  hostnames:
    - mealie-stage.burntbytes.com # match requests for app2.example.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mealie-https
  namespace: mealie
spec:
  hostnames:
    - mealie-stage.burntbytes.com # match requests for app2.example.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
      - name: mealie
        port: 9000
